@@ -662,6 +662,8 @@ extern rtems_configuration_table        Configuration;
    */
 
   #ifdef CONFIGURE_MP_APPLICATION
+    #define CONFIGURE_TIMER_FOR_SHARED_MEMORY_DRIVER 1
+
     #ifndef CONFIGURE_HAS_OWN_MULTIPROCESSING_TABLE
 
       #ifndef CONFIGURE_MP_NODE_NUMBER
@@ -711,6 +713,7 @@ extern rtems_configuration_table        Configuration;
   #else
 
     #define CONFIGURE_MULTIPROCESSING_TABLE    NULL
+    #define CONFIGURE_TIMER_FOR_SHARED_MEMORY_DRIVER 0
 
   #endif /* CONFIGURE_MP_APPLICATION */
 #endif /* RTEMS_MULTIPROCESSING */
@@ -1531,7 +1534,8 @@ extern rtems_configuration_table        Configuration;
  */
 #define CONFIGURE_MEMORY_FOR_CLASSIC \
   (CONFIGURE_MEMORY_FOR_TASK_VARIABLES(CONFIGURE_MAXIMUM_TASK_VARIABLES) + \
-   CONFIGURE_MEMORY_FOR_TIMERS(CONFIGURE_MAXIMUM_TIMERS) + \
+   CONFIGURE_MEMORY_FOR_TIMERS(CONFIGURE_MAXIMUM_TIMERS + \
+    CONFIGURE_TIMER_FOR_SHARED_MEMORY_DRIVER ) + \
    CONFIGURE_MEMORY_FOR_SEMAPHORES(CONFIGURE_MAXIMUM_SEMAPHORES + \
      CONFIGURE_LIBIO_SEMAPHORES + CONFIGURE_TERMIOS_SEMAPHORES) + \
    CONFIGURE_MEMORY_FOR_MESSAGE_QUEUES(CONFIGURE_MAXIMUM_MESSAGE_QUEUES) + \
@@ -1691,7 +1695,7 @@ extern rtems_configuration_table        Configuration;
   rtems_api_configuration_table Configuration_RTEMS_API = {
     CONFIGURE_MAXIMUM_TASKS,
     CONFIGURE_NOTEPADS_ENABLED,
-    CONFIGURE_MAXIMUM_TIMERS,
+    CONFIGURE_MAXIMUM_TIMERS + CONFIGURE_TIMER_FOR_SHARED_MEMORY_DRIVER,
     CONFIGURE_MAXIMUM_SEMAPHORES + CONFIGURE_LIBIO_SEMAPHORES +
       CONFIGURE_TERMIOS_SEMAPHORES,
     CONFIGURE_MAXIMUM_MESSAGE_QUEUES,
